--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 #section1 {
  margin-top: 6em; 
 }
+#section1a {
+ margin-top: 6em; 
+}
+
 #section2 {
   margin-top: 6em; 
  }
